fixing small spacing issue

--- a/frontend/src/stylesheets/components/_gradientLine.scss
+++ b/frontend/src/stylesheets/components/_gradientLine.scss
@@ -2,5 +2,4 @@
   height: 2px;
   background: linear-gradient(to right, #F8A6FF, #FFC93F, #a4a9db);
   width: 90%;
-  margin-bottom: 20px;
 }
